--- a/app/globals.css
+++ b/app/globals.css
@@ -45,6 +45,20 @@
     transition: all 0.3s ease-in-out;
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
   }
+
+  .line-clamp-2 {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+
+  .line-clamp-3 {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
 }
 
 /* Start of gradient button */
